<resources>
    <string name="app_name">Chalan</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="crear_proyecto">Crear Proyecto</string>
    <string name="challanes">Challanes</string>
    <string name="ver_proyectos">Ver Proyectos</string>
    <string name="ver_precios_comunes">Ver Precios Comunes</string>
    <string name="iniciar_sesion2">Iniciar Sesión</string>
    <string name="calculadora_de_estimaciones">Calculadora de Estimaciones</string>
    <string name="ver_productos">Ver Productos</string>
</resources>